<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>perception_msgs</name>
  <version>0.1.0</version>
  <description>ROS messages used for perception projects</description>
  <maintainer email="pola5392@kettering.edu">Zeus Polanco Salgado</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/surety/perception_msgs</url>
  <author email="pola5392@kettering.edu">Zeus Polanco Salgado</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>message_runtime</build_depend>
</package>
